feat(api): add description + server for documentation
